# autoDyn

./: .gitignore  LICENSE  README.md  behavior_net.py  block_dynamics.py  ctrl_sys.py  dynLib.py  dynSys.py  dyn_sys.py  example_basics.py  example_lied.py  lieLib.py  main.py  network_viz.py  pyproject.toml  requirements.txt  script_gdsgn.py  setup.py  test_script.py  trajectory_optim.py
.devcontainer/: Dockerfile  devcontainer.json
examples/: Untitled.ipynb  arrow_eg.py  behavior_example.py  kura_JAX.py
lib/: dynLib.py  dynSys.py  hopf_element.py  lieLib.py
notebooks/: barebone_example.ipynb
scripts/: HopfNet.py  JAX_eg_ctrl.py  PMP_buildup.py  PMP_setup.py  WC_basic.py  WC_weighed.py  liouville.py  trajectory_optim.py
scripts/basics/: basic_setup.py  builder_dynamics.py  kuramoto_eg.py
scripts/basics/sys_types/: consensus.py  controlled_hopf.py  kuramoto_eg.py
scripts/wilson-cowan/: basic_setup.py  neurotransmitter.py
src/autoDyn/: dynLib.py  net_viz_lib.py
src/autodyn/: anim_class.py  dynLib.py  dynSys.py
src/autodyn/analysis/: lieLib.py
src/autodyn/base/: dynSys.py
src/autodyn/builder/: micro.py
src/autodyn/core/: control.py  dynamical.py  network.py
src/autodyn/core/integrators/: runge_kutta.py
src/autodyn/core/lifters/: legendre.py
src/autodyn/models/: dynLib.py  generics.py  hopf_element.py
src/autodyn/models/canonical/: standard.py
src/autodyn/models/neuro/: kuramoto.py  scalar.py  wc.py
src/autodyn/utils/: __init__.py  functions.py
src/autodyn/viz/: anim_class.py  dyn.py  net_viz_lib.py
